--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html(lang="en" dir="ltr")
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='static/assets/img/profile-img-n.jpg', alt='')
+          img.thumbnail(src='static/assets/img/profile-img-n.jpg', alt='profile-img')
         .dev-intro-box
 
           //- Replace with your name
