--- a/views/error.pug
+++ b/views/error.pug
@@ -6,6 +6,6 @@ block content
         pre #{err.stack}
 
         h1 
-            a(href='/') Home
+            a(href='/')
 
-    img(src='/public/assets/img/profile-img-n.jpg')
+    img(src='static/assets/img/error.gif')
