--- a/views/index.pug
+++ b/views/index.pug
@@ -17,6 +17,6 @@ block content
         
 
         .cell
-          a(href=`projects/${project.id}`,target="_blank")
+          a(href=`projects/${project.id}`)
             img.thumbnail(src=`${project.image_urls[0]}`, alt=`${project.project_name}`)
             h5 #{project.project_name}
