--- a/views/error.pug
+++ b/views/error.pug
@@ -7,5 +7,4 @@ block content
 
         h1 
             a(href='/')
-
-    img(src='static/assets/img/error.gif')
+             img(src="static/assets/img/error.gif")
