--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,8 @@ block content
   article.portfolio-intro
     h1 Welcome  
     p my profile tests for now 
+  .thumbnail-box
+          img.thumbnail(src='/static/assets/logo/cat-logo.gif', alt='cat logo',width="200", height="200")
   article.portfolio-project-thumbs
     .projects-box.box.grid
        each project in projects
