--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -137,7 +137,7 @@ nav a span {
   height: 100%;
   min-height: 100%;
   padding: 20px;
-  background: #000;
+  background: rgba(97, 122, 142, 0.758);
 }
 
 .sidebar-info-box {
@@ -176,7 +176,7 @@ nav a span {
   font-size: 13px;
   letter-spacing: 2.5px;
   text-transform: uppercase;
-  color: #555;
+  color:whitesmoke;
 }
 
 .header {
@@ -333,6 +333,7 @@ nav a span {
 
   .cell h5 {
     font-size: 1.25rem;
+    text-shadow: 2px 2px rgb(135, 135, 135);
   }
 
   .grid {
