--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -1,9 +1,21 @@
-extends layout 
-block content 
-    div.centerIt
+extends layout.pug
+
+block content
+
+  nav.nav
+    a(href='/')
+      span &larr;
+      |  Back
+ div.centerIt
         h1 #{err.message} 
         h2 #{err.status} 
         h3
             a(href='/') 
              img.errorImg(src='static/assets/img/error.gif')
         pre #{err.stack}
+
+
+    nav.nav
+      a(href='/')
+        span &larr;
+        |  Back 
