--- a/views/error.pug
+++ b/views/error.pug
@@ -6,7 +6,7 @@ block content
     a(href='/')
       span &larr;
       |  Back
-    div.centerIt
+    .centerIt
     h1 #{err.message}
     h2 #{err.status} 
     pre #{err.stack}
