--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,8 @@ extends layout.pug
 
 block content
   article.portfolio-intro
-    h1 Welcome  
-    p my profile tests for now 
+    h1 Welcome to my collection of projects  
+    p This is a sample project collection, containing a number of my cool projects
   .thumbnail-box
           img.thumbnail(src='/static/assets/logo/cat-logo.gif', alt='cat logo',width="80", height="80")
   article.portfolio-project-thumbs
