--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,10 +14,10 @@ html(lang="en" dir="ltr")
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='/static/assets/img/profile-img-n.jpg', alt='profile-img')
+          img.thumbnail(src='/static/assets/img/profile-img-nn.jpg', alt='profile-img')
         .dev-intro-box
-          h5 Rotem As
-          p Description test des 
+          h5 Rotem Aslan 
+          p Brings a combination of technical knowledge in computing and management communication infrastructures, along with out-of-the-box creative thinking and self-learning ability
           a(href='/about') Learn More &rarr;
 
     .wrapper
