--- a/views/about.pug
+++ b/views/about.pug
@@ -13,7 +13,7 @@ block content
         h1 Rotem As
         p Full Stack JavaScript Developer
         .about-bio
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p Brings a combination of technical knowledge in computing and management communication infrastructures, along with out-of-the-box creative thinking and self-learning ability 
 
 
       .skills-contact-box.box
